-u swagger, auth.routes, views. & add nodemailer, websocket, sentry
